--- a/src/App.css
+++ b/src/App.css
@@ -227,9 +227,9 @@ body {
 }
 .slidev-layout.cover,
 .slidev-layout.intro {
-  display: -ms-grid;
   display: grid;
   height: 100%;
+  align-items: center;
 }
 .slidev-layout.cover h1,
 .slidev-layout.intro h1 {
