fix: 🐛 编辑模式摄像头可以开启

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-button {
+.btn {
   @apply py-1 px-2 rounded-sm bg-indigo-500 text-white;
 }
-button[disabled] {
+.btn[disabled] {
   @apply opacity-50 cursor-not-allowed;
 }
 .slide-content {
@@ -194,4 +194,32 @@ button[disabled] {
   font-weight: 500;
   font-size: 3.75rem;
   line-height: 5rem;
+}
+
+.react-resizable {
+  position: relative;
+}
+
+.react-resizable-handle {
+  z-index: 10;
+  position: absolute;
+  width: 16px;
+  height: 100%;
+  bottom: 0;
+  right: -8px;
+  cursor: col-resize;
+}
+
+.react-resizable-handle:hover::after {
+  opacity: 1;
+}
+.react-resizable-handle::after {
+  opacity: 0;
+  content: "";
+  display: block;
+  position: absolute;
+  left: 6px;
+  top: 0;
+  bottom: 0;
+  @apply border-l-2 border-indigo-500;
 }
